# soap_mockup

./: .gitignore  README.md  pyproject.toml  rascunho  usuarios.db
src/client/: main.py  soap_mockup_client.md
src/server/: main.py  soap_mockup_server.md  usuarios.db
src/server/templates/: ui.html
