[project]
name = "soap-mockup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Malki-çedheq Benjamim", email = "malki-cedheq@github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "pysimplesoap>=1.16.2",
    "python-dotenv>=1.1.1",
    "zeep>=4.3.1",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
server = "src.server.main:main"
client = "src.client.main:main"
